# nl

./: .clang-format  CMakeLists.txt  README.md  todo.txt
build-environment/: CMakeLists.txt
build-environment/beaglebone/: CMakeLists.txt
build-environment/beaglebone/buildroot/: CMakeLists.txt  Dockerfile.in
build-environment/epc/: Dockerfile.in
build-environment/pi4/: Dockerfile.in  toolchain.cmake
build-environment/playcontroller/: Dockerfile.in  toolchain.cmake
build-environment/web/: toolchain.cmake
build-environments/: CMakeLists.txt
build-environments/beaglebone/: CMakeLists.txt  Dockerfile.in  toolchain.cmake
build-environments/beaglebone/buildroot/: CMakeLists.txt  Dockerfile.in
build-environments/epc/: CMakeLists.txt  Dockerfile.in  toolchain.cmake
build-environments/pi4/: CMakeLists.txt  Dockerfile.in  toolchain.cmake
build-environments/playcontroller/: CMakeLists.txt  Dockerfile.in  toolchain.cmake
build-environments/web/: CMakeLists.txt  Dockerfile.in  toolchain.cmake
cmake/: CMakeLists.txt  ccache.cmake  configuration.cmake  crossbuild.cmake  nltools.cmake  package.cmake  pi4-image-def.cmake  podman.cmake  runPodman.sh.in  systemd.cmake
configuration/: CMakeLists.txt  Dockerfile.in  main.ts  package-lock.json  package.json  process.sh  readme.md
configuration/lib/: build.js  yaml.js
configuration/lib/tasks/: config.js  declarations.js  definitions.js
dev-environments/: CMakeLists.txt
dev-environments/web/: CMakeLists.txt  toolchain.cmake
doc/: doc.tex
os/: CMakeLists.txt
os/beaglebone/: CMakeLists.txt
os/beaglebone/factory-rootfs/: CMakeLists.txt  Dockerfile.in
os/beaglebone/update-rootfs/: CMakeLists.txt
os/epc/: CMakeLists.txt
os/epc/factory-iso/: CMakeLists.txt  Dockerfile.in  generatePkgBuild.sh  install-factory-os.sh  sda.sfdisk
os/epc/update-rootfs/: CMakeLists.txt  Dockerfile.in  arch-chroot  build-rootfs.sh  pacstrap
os/pi4/: CMakeLists.txt
os/pi4/factory-img/: CMakeLists.txt  Dockerfile.in  createRootFS.sh  mountImage.sh
os/pi4/factory-img/boot/: CMakeLists.txt  Dockerfile.in  createBootFS.sh
os/pi4/factory-img/pre/: CMakeLists.txt  Dockerfile.in
os/pi4/factory-img/root/: CMakeLists.txt  Dockerfile.in  createRootFS.sh  tweakImage.sh
os/pi4/update-img/: CMakeLists.txt
package/audio-engine/src/io/: HighPriorityTask.cpp
package/audio-engine/src/io/audio/: AlsaAudioOutput.cpp
package/audio-engine/src/recorder/: Bitstream.h
package/audio-engine/src/synth/c15-audio-engine/: ParallelData.h  ae_info.h  parameter_handle.h  parameter_storage.h
package/audio-engine/system/: fixCpuBindings.service.in
package/beaglebone-scripts/: CMakeLists.txt
package/bridge/systemd/: splash-screen.service.in
package/epc-scripts/: CMakeLists.txt
package/mc-view/: index.html
package/meteor/: .meteorignore  package.json
package/meteor/.meteor/: packages
package/meteor/client/: build-time-info.js  main.html
package/midi-over-ip/: CMakeLists.txt
package/midi-over-ip/systemd/: midi-over-ip.service.in
package/nltools/: CMakeLists.txt  main.cpp
package/nltools/tests/: CMakeLists.txt
package/nonmaps/: CMakeLists.txt
package/online-help/: CMakeLists.txt
package/online-help/src/documents/man-user/12-license/: ftl.txt
package/playcontroller-firmware/: CMakeLists.txt
package/playcontroller-tools/src/: playcontroller-read.c  playcontroller.c
package/playground/: CMakeLists.txt
package/playground/src/: CompileTimeOptions.h.in  playground.h
package/playground/src/device-settings/: EpcWifi.cpp  SSID.cpp
package/playground/src/http/: UpdateDocumentMaster.h
package/playground/src/libundo/: configure.ac
package/playground/src/libundo/docs/: Doxyfile.in
package/playground/src/parameters/: ModulateableParameter.cpp
package/playground/src/proxies/hwui/panel-unit/: PanelUnitPresetMode.cpp
package/recorder/: CMakeLists.txt  bar-range.ts  tsconfig.json
package/text2soled/: CMakeLists.txt
package/text2soled/src/: CompileTimeInfo.h.in
podman-registry/: CMakeLists.txt
shared/: CMakeLists.txt
shared/playcontroller/: EHC-pedal-presets.c
update/c15/: CMakeLists.txt  Dockerfile.in
update/c15/beaglebone/: CMakeLists.txt  bundle.sh
update/c15/epc/: CMakeLists.txt  Dockerfile.in  backdoor.sh  bundle.sh
update/c15/epc/web/: CMakeLists.txt
update/c15/playcontroller/: CMakeLists.txt
update/c16/: CMakeLists.txt  Dockerfile.in  bundle.sh
update/c16/pi4/: CMakeLists.txt
update/c16/web/: CMakeLists.txt
updates/: CMakeLists.txt
updates/c15/: CMakeLists.txt  bundle.sh
updates/c15/beaglebone/: CMakeLists.txt  Dockerfile.in  bundle.sh
updates/c15/epc/: CMakeLists.txt  Dockerfile.in  bundle.sh
updates/c15/epc/web/: CMakeLists.txt
updates/c15/playcontroller/: CMakeLists.txt
updates/c15/web/: CMakeLists.txt
updates/c16/: CMakeLists.txt  bundle.sh
updates/c16/pi4/: CMakeLists.txt
updates/c16/web/: CMakeLists.txt
