cmake_minimum_required(VERSION 3.0)
project(beaglebone-scripts)

include(${CMAKE_BINARY_DIR}/cmake/systemd.cmake)
include(GNUInstallDirs)

file(GLOB_RECURSE SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/*.sh)
file(GLOB_RECURSE CONFIGURE_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/*.sh.in)
file(GLOB_RECURSE CALIBRATION ${CMAKE_CURRENT_SOURCE_DIR}/calibration/*)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/display-splashscreen.sh.in ${CMAKE_CURRENT_BINARY_DIR}/display-splashscreen.sh @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/display-splashscreen.sh
    DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
                GROUP_READ GROUP_WRITE GROUP_EXECUTE
                WORLD_READ WORLD_WRITE WORLD_EXECUTE)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/byebye-screen.sh.in ${CMAKE_CURRENT_BINARY_DIR}/byebye-screen.sh @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/byebye-screen.sh
    DESTINATION ${SYSTEMD_SERVICES_INSTALL_DIR}/../system-shutdown
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
                GROUP_READ GROUP_EXECUTE
                WORLD_READ WORLD_EXECUTE)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/install-update.sh.in ${CMAKE_CURRENT_BINARY_DIR}/install-update.sh @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/install-update.sh
        DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/install-update-from-epc.sh.in ${CMAKE_CURRENT_BINARY_DIR}/install-update-from-epc.sh @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/install-update-from-epc.sh
        DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE)

install(FILES ${SCRIPTS}
    DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
                GROUP_READ GROUP_WRITE GROUP_EXECUTE
                WORLD_READ WORLD_WRITE WORLD_EXECUTE)

install(FILES ${CALIBRATION}
    DESTINATION ${CMAKE_INSTALL_FULL_SYSCONFDIR}/calibration
    PERMISSIONS OWNER_READ OWNER_WRITE
                GROUP_READ GROUP_WRITE
                WORLD_READ WORLD_WRITE)

include(${CMAKE_BINARY_DIR}/cmake/package.cmake)
deb("" "Helper scripts running on the C15 Beaglebone")